--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
             "src": "./index.js",
             "use": "@versel/node"
         }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
 }
